Cambios sugeridos por Eistein

--- a/forms.html
+++ b/forms.html
@@ -74,6 +74,8 @@
                           </li>
                           <li class="nav-item"><a class="nav-link" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
                           </li>
+                          <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
+                          </li>
                         </ul>
           </nav>
           <main>
@@ -98,238 +100,20 @@
                                 <div class="card-block card-body">
                                   <form>
                                     <div class="row">
-                                      <div class="col-sm-3 form-group input-field">
-                                        <label for="">Nº Papeleta</label>
-                                        <input class="form-control" type="text" disabled="">
-                                      </div>
-                                      <div class="col-sm-3 form-group">
-                                        <label for="exampleFormControlSelect1">Categoría</label>
-                                        <select class="custom-select" id="exampleFormControlSelect1">
-                                          <option>Categoría 1</option>
-                                          <option>Categoría 2</option>
-                                          <option>Categoría 3</option>
-                                          <option>Categoría 4</option>
-                                          <option>Categoría 5</option>
-                                        </select>
-                                      </div>
-                                      <div class="col-sm-3 form-group">
-                                        <label for="cbTipo">Tipo</label>
-                                        <select class="custom-select" id="cbTipo">
-                                          <option>Tipo 1</option>
-                                          <option>Tipo 2</option>
-                                          <option>Tipo 3</option>
-                                          <option>Tipo 4</option>
-                                          <option>Tipo 5</option>
-                                        </select>
-                                      </div>
-                                      <div class="col-sm-3 form-group">
-                                        <label for="cbTipo">Detalle</label>
-                                        <select class="custom-select" id="cbTipo">
-                                          <option>Detalle 1</option>
-                                          <option>Detalle 2</option>
-                                          <option>Detalle 3</option>
-                                          <option>Detalle 4</option>
-                                          <option>Detalle 5</option>
-                                        </select>
-                                      </div>
-                                    </div>
-                                    <div class="row">
-                                      <div class="col-sm-6">
-                                        <fieldset>
-                                          <legend>Desde</legend>
-                                          <div class="row">
-                                            <div class="col-sm-4 form-group input-field">
-                                              <label for="">Fecha de Inicio</label>
-                                              <input class="form-control" id="desde" type="date">
-                                            </div>
-                                            <div class="col-sm-4 form-group">
-                                              <label for="">Hora</label>
-                                              <select class="custom-select" id="horasDesde">
-                                                <option value="9">08</option>
-                                                <option value="10">09</option>
-                                                <option value="11">10</option>
-                                                <option value="12">11</option>
-                                                <option value="13">12</option>
-                                                <option value="14">13</option>
-                                                <option value="15">14</option>
-                                                <option value="16">15</option>
-                                                <option value="17">16</option>
-                                                <option value="18">17</option>
-                                              </select>
-                                            </div>
-                                            <div class="col-sm-4 form-group">
-                                              <label for="">Min</label>
-                                              <select class="custom-select" id="minutosDesde">
-                                                <option value="00">00</option>
-                                                <option value="01">01</option>
-                                                <option value="02">02</option>
-                                                <option value="03">03</option>
-                                                <option value="04">04</option>
-                                                <option value="05">05</option>
-                                                <option value="06">06</option>
-                                                <option value="07">07</option>
-                                                <option value="08">08</option>
-                                                <option value="09">09</option>
-                                                <option value="10">10</option>
-                                                <option value="11">11</option>
-                                                <option value="12">12</option>
-                                                <option value="13">13</option>
-                                                <option value="14">14</option>
-                                                <option value="15">15</option>
-                                                <option value="16">16</option>
-                                                <option value="17">17</option>
-                                                <option value="18">18</option>
-                                                <option value="19">19</option>
-                                                <option value="20">20</option>
-                                                <option value="21">21</option>
-                                                <option value="22">22</option>
-                                                <option value="23">23</option>
-                                                <option value="24">24</option>
-                                                <option value="25">25</option>
-                                                <option value="26">26</option>
-                                                <option value="27">27</option>
-                                                <option value="28">28</option>
-                                                <option value="29">29</option>
-                                                <option value="30">30</option>
-                                                <option value="31">31</option>
-                                                <option value="32">32</option>
-                                                <option value="33">33</option>
-                                                <option value="34">34</option>
-                                                <option value="35">35</option>
-                                                <option value="36">36</option>
-                                                <option value="37">37</option>
-                                                <option value="38">38</option>
-                                                <option value="39">39</option>
-                                                <option value="40">40</option>
-                                                <option value="41">41</option>
-                                                <option value="42">42</option>
-                                                <option value="43">43</option>
-                                                <option value="44">44</option>
-                                                <option value="45">45</option>
-                                                <option value="46">46</option>
-                                                <option value="47">47</option>
-                                                <option value="48">48</option>
-                                                <option value="49">49</option>
-                                                <option value="50">50</option>
-                                                <option value="51">51</option>
-                                                <option value="52">52</option>
-                                                <option value="53">53</option>
-                                                <option value="54">54</option>
-                                                <option value="55">55</option>
-                                                <option value="56">56</option>
-                                                <option value="57">57</option>
-                                                <option value="58">58</option>
-                                                <option value="59">59</option>
-                                              </select>
-                                            </div>
-                                          </div>
-                                        </fieldset>
-                                      </div>
-                                      <div class="col-sm-6">
-                                        <fieldset>
-                                          <legend>Hasta</legend>
-                                          <div class="row">
-                                            <div class="col-sm-4 form-group input-field">
-                                              <label for="">Fecha de Fin</label>
-                                              <input class="form-control" id="desde" type="date">
-                                            </div>
-                                            <div class="col-sm-4 form-group">
-                                              <label for="">Hora</label>
-                                              <select class="custom-select" id="horasDesde">
-                                                <option value="9">08</option>
-                                                <option value="10">09</option>
-                                                <option value="11">10</option>
-                                                <option value="12">11</option>
-                                                <option value="13">12</option>
-                                                <option value="14">13</option>
-                                                <option value="15">14</option>
-                                                <option value="16">15</option>
-                                                <option value="17">16</option>
-                                                <option value="18">17</option>
-                                              </select>
-                                            </div>
-                                            <div class="col-sm-4 form-group">
-                                              <label for="">Min</label>
-                                              <select class="custom-select" id="minutosDesde">
-                                                <option value="00">00</option>
-                                                <option value="01">01</option>
-                                                <option value="02">02</option>
-                                                <option value="03">03</option>
-                                                <option value="04">04</option>
-                                                <option value="05">05</option>
-                                                <option value="06">06</option>
-                                                <option value="07">07</option>
-                                                <option value="08">08</option>
-                                                <option value="09">09</option>
-                                                <option value="10">10</option>
-                                                <option value="11">11</option>
-                                                <option value="12">12</option>
-                                                <option value="13">13</option>
-                                                <option value="14">14</option>
-                                                <option value="15">15</option>
-                                                <option value="16">16</option>
-                                                <option value="17">17</option>
-                                                <option value="18">18</option>
-                                                <option value="19">19</option>
-                                                <option value="20">20</option>
-                                                <option value="21">21</option>
-                                                <option value="22">22</option>
-                                                <option value="23">23</option>
-                                                <option value="24">24</option>
-                                                <option value="25">25</option>
-                                                <option value="26">26</option>
-                                                <option value="27">27</option>
-                                                <option value="28">28</option>
-                                                <option value="29">29</option>
-                                                <option value="30">30</option>
-                                                <option value="31">31</option>
-                                                <option value="32">32</option>
-                                                <option value="33">33</option>
-                                                <option value="34">34</option>
-                                                <option value="35">35</option>
-                                                <option value="36">36</option>
-                                                <option value="37">37</option>
-                                                <option value="38">38</option>
-                                                <option value="39">39</option>
-                                                <option value="40">40</option>
-                                                <option value="41">41</option>
-                                                <option value="42">42</option>
-                                                <option value="43">43</option>
-                                                <option value="44">44</option>
-                                                <option value="45">45</option>
-                                                <option value="46">46</option>
-                                                <option value="47">47</option>
-                                                <option value="48">48</option>
-                                                <option value="49">49</option>
-                                                <option value="50">50</option>
-                                                <option value="51">51</option>
-                                                <option value="52">52</option>
-                                                <option value="53">53</option>
-                                                <option value="54">54</option>
-                                                <option value="55">55</option>
-                                                <option value="56">56</option>
-                                                <option value="57">57</option>
-                                                <option value="58">58</option>
-                                                <option value="59">59</option>
-                                              </select>
-                                            </div>
-                                          </div>
-                                        </fieldset>
-                                      </div>
-                                    </div>
-                                    <div class="row">
                                       <div class="col-sm-12 form-group">
-                                        <label for="">Motivo</label>
-                                        <textarea class="form-control" id="motivo" rows="2"></textarea>
+                                        <label for="lg">Large</label>
+                                        <input class="form-control form-control-lg" id="lg" placeholder=".form-control-lg">
                                       </div>
-                                    </div>
-                                    <div class="row">
                                       <div class="col-sm-12 form-group">
-                                        <label for="">Justificación</label>
-                                        <input class="form-control-file" id="archivos" type="file" multiple="">
+                                        <label for="default">Default</label>
+                                        <input class="form-control" id="default" placeholder="Default input size">
+                                      </div>
+                                      <div class="col-sm-12 form-group">
+                                        <label for="sm">Small</label>
+                                        <input class="form-control form-control-sm" id="sm" placeholder=".form-control-sm">
                                       </div>
                                     </div>
-                                    <button class="btn btn-primary" type="submit">Agregar papeleta</button>
+                                    <button class="btn btn-primary" type="submit">Enviar</button>
                                     <button class="btn btn-light" type="submit">Cancelar</button>
                                   </form>
                                 </div>
@@ -348,7 +132,7 @@
       </div>
       <script src="dist/scripts/vendor.js"></script>
       <script>
-        let SimpleBar = require("SimpleBar");
+        let SimpleBar = require("simplebar");
         
         new SimpleBar(document.getElementById('sidebar'), {
         scrollbarMinSize: 100,
