--- a/simplebar.html
+++ b/simplebar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Toastr</title>
+    <title>SimpleBar</title>
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -74,6 +74,8 @@
                           </li>
                           <li class="nav-item"><a class="nav-link active" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
                           </li>
+                          <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
+                          </li>
                         </ul>
           </nav>
           <main>
@@ -85,7 +87,7 @@
                               </ol>
                             </nav>
               <section class="page-action">
-                <h2>Toastr</h2>
+                <h2>SimpleBar</h2>
                 <button class="btn btn-sm btn-secondary" type="button">Llamada +</button>
               </section>
             </div>
@@ -128,7 +130,7 @@
       </div>
       <script src="dist/scripts/vendor.js"></script>
       <script>
-        let SimpleBar = require("SimpleBar");
+        let SimpleBar = require("simplebar");
         
         new SimpleBar(document.getElementById('sidebar'), {
         scrollbarMinSize: 100,
