--- a/tables-1.html
+++ b/tables-1.html
@@ -76,6 +76,8 @@
                           </li>
                           <li class="nav-item"><a class="nav-link" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
                           </li>
+                          <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
+                          </li>
                         </ul>
           </nav>
           <main>
@@ -163,7 +165,7 @@
       </div>
       <script src="dist/scripts/vendor.js"></script>
       <script>
-        let SimpleBar = require("SimpleBar");
+        let SimpleBar = require("simplebar");
         
         new SimpleBar(document.getElementById('sidebar'), {
         scrollbarMinSize: 100,
