Se anadio datepicker y inputmask

--- a/cdn.html
+++ b/cdn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SimpleBar</title>
+    <title>CDN</title>
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,7 @@
     <link rel="icon" href="dist/images/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="dist/images/favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel="icon" href="dist/images/favicon.ico">
-    <link rel="stylesheet" type="text/css" media="screen" href="dist/styles/app.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="http://www.marcialsoto.com/cdn/?u=http://www.marcialsoto.com/cdn/library/dist/styles/app.css">
     <body class="theme-default  sidebar-secondary-collapse" id="page">
       <div id="wrapper">
         <header class="header navbar navbar-expand-sm">
@@ -72,11 +72,11 @@
                               <li><a class="nav-link" href="./modals-2.html" title="Modales Verticales"><i class="far fa-circle"></i><span>Modales Verticales</span></a></li>
                             </ul>
                           </li>
-                          <li class="nav-item"><a class="nav-link active" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
+                          <li class="nav-item"><a class="nav-link" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
                           </li>
                           <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link" href="./cdn.html" title="CDN"><i class="fas fa-chalkboard"></i><span>CDN</span></a>
+                          <li class="nav-item"><a class="nav-link active" href="./cdn.html" title="CDN"><i class="fas fa-chalkboard"></i><span>CDN</span></a>
                           </li>
                         </ul>
           </nav>
@@ -85,37 +85,22 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a class="breadcrumb-item" href="./dashboard.html">Inicio</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">SimpleBar</li>
+                                <li class="breadcrumb-item active" aria-current="page">CDN</li>
                               </ol>
                             </nav>
               <section class="page-action">
-                <h2>SimpleBar</h2>
+                <h2>CDN</h2>
                 <button class="btn btn-sm btn-secondary" type="button">Llamada +</button>
               </section>
             </div>
             <section class="row">
               <div class="col-sm-12">
-                              <div class="card mb-5 undefined">
+                              <div class="card mb-5 ">
                                 <div class="card-header">
-                                  <h4 class="card-title">Uso de SimpleBar</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="https://github.com/Grsmto/simplebar"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <h4 class="card-title">CDN</h4>
                                 </div>
                                 <div class="card-block card-body">
-                                  <pre><code>&lt;div data-simplebar style=&quot;height:50rem&quot;&gt;</code></pre>
-                                  <div class="simplebar" data-simplebar="simplebar" scrollbarMinSize="" style="height:50rem;">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
-                                  </div>
+                                  <pre><code>&lt;iframe allowtransparency=true frameborder=0 id=rf sandbox=&quot;allow-same-origin allow-forms allow-scripts&quot; scrolling=auto src=&quot;http://localhost/&quot; style=&quot;width:100%;height:100%&quot;&gt;&lt;/iframe&gt;</code></pre>
                                 </div>
                               </div>
               </div>
@@ -130,14 +115,7 @@
         </aside>
         <div class="sidebartoggler" id="overlay"></div>
       </div>
-      <script src="dist/scripts/vendor.js"></script>
-      <script>
-        let SimpleBar = require("simplebar");
-        
-        new SimpleBar(document.getElementById('sidebar'), {
-        scrollbarMinSize: 100,
-        });
-      </script>
+      <script src="http://www.marcialsoto.com/cdn/?u=http://www.marcialsoto.com/cdn/library/dist/scripts/vendor.js"></script>
     </body>
   </head>
 </html>
