--- a/tables-1.html
+++ b/tables-1.html
@@ -78,6 +78,8 @@
                           </li>
                           <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
                           </li>
+                          <li class="nav-item"><a class="nav-link" href="./cdn.html" title="CDN"><i class="fas fa-chalkboard"></i><span>CDN</span></a>
+                          </li>
                         </ul>
           </nav>
           <main>
